--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ temp/
 
 # for production
 ormconfig.json
+src/**/*.js
 
 # Logs
 logs
@@ -14,6 +15,7 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.DS_Store
 
 # Runtime data
 pids
