--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@types/body-parser": "^1.17.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-jwt": "^5.3.1",
+    "express-jwt": ">=6.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.1",
     "mysql": "^2.17.1",
