--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.7.7",
+    "showdown": "^1.9.1",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
